# t4rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl
examples/: doc_example1.tt  recompile.rs  recompile.tt
src/: lib.rs
tests/: bracket_escaping.rs  bracket_escaping.tt  clean_ws.rs  clean_ws.tt  clean_ws2.tt  escape_function.rs  escape_function.tt  sharp_escaping.rs  sharp_escaping.tt  simple_template.rs  simple_template.tt  text_only.rs  text_only.tt
