[package]
name = "t4rust-derive"
version = "0.3.0"
authors = ["Splamy <splamyn@gmail.com>"]
description = """
t4rust is a compile-time templating-engine which allows you to write plain rust
code in your template.
"""
repository = "https://github.com/ReSpeak/t4rust"
readme = "README.md"
keywords = ["T4"]
categories = ["template-engine"]
license = "MIT/Apache-2.0"
edition = "2018"
include = [
    "src/*",
    "README.md",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT"
]

[dependencies]
nom = "5.1"
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
name = "t4rust_derive"
path = "src/lib.rs"
